--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "16.3.2",
     "react-scripts": "1.1.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "prettier": "^1.12.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
